--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,82 +3,64 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{jones2023batman,
+  title={BATMAN: A Brain-like Approach for Tracking Maritime Activity and Nuance},
+  author={Jones, Alexander and Koehler, Stephan and Jerge, Michael and Graves, Mitchell and King, Bayley and Dalrymple, Richard and Freese, Cody and Von Albade, James},
+  journal={Sensors},
+  volume={23},
+  number={5},
+  pages={2424},
+  year={2023},
+  publisher={MDPI}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{king2022securing,
+  title={Securing 3rd-party hdl ip: a feasibility study using evolutionary methods},
+  author={King, Bayley and Jha, Rashmi and Kebede, Temesguen and Kap, David},
+  journal={Journal of Hardware and Systems Security},
+  volume={6},
+  number={1-2},
+  pages={17--31},
+  year={2022},
+  publisher={Springer}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{barve2021neurosofm,
+  title={NeuroSOFM: A neuromorphic self-organizing feature map heterogeneously integrating RRAM and FeFET},
+  author={Barve, Siddharth and Mayersky, Joshua and Ford, Andrew J and Jones, Alexander and King, Bayley and Ruen, Aaron and Jha, Rashmi},
+  journal={IEEE Journal on Exploratory Solid-State Computational Devices and Circuits},
+  volume={7},
+  number={2},
+  pages={97--105},
+  year={2021},
+  publisher={IEEE}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{haehn2022verigene,
+  title={VeriGene: A Tool for the Creation of DNA Representations for Hardware Security Analysis},
+  author={Haehn, Nicholas and King, Bayley and Jha, Rashmi and Kebede, Temesguen and Kapp, David},
+  booktitle={2022 IEEE Physical Assurance and Inspection of Electronics (PAINE)},
+  pages={1--7},
+  year={2022},
+  organization={IEEE}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{king2020unsupervised,
+  title={Unsupervised clustering of COVID-19 chest X-ray images with a self-organizing feature map},
+  author={King, Bayley and Barve, Siddharth and Ford, Andrew and Jha, Rashmi},
+  booktitle={2020 IEEE 63rd international midwest symposium on circuits and systems (MWSCAS)},
+  pages={395--398},
+  year={2020},
+  organization={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+@INPROCEEDINGS{9058062,
+  author={Collins, Zachary and King, Bayley and Jha, Rashmi and Kapp, David and Ralescu, Anca},
+  booktitle={2019 IEEE National Aerospace and Electronics Conference (NAECON)}, 
+  title={Evolvable Hardware for Security through Diverse Variants}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={257-261},
+  keywords={Hardware;Security;Sociology;Statistics;Genetic programming;Programming;Evolutionary computation;trust;security;evolutionary;evolvable hardware (EH);vlsi},
+  doi={10.1109/NAECON46414.2019.9058062}}
