courses added; website ready

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,8 @@
   number={1-2},
   pages={17--31},
   year={2022},
-  publisher={Springer}
+  publisher={Springer},
+  selected={true}
 }
 
 @article{barve2021neurosofm,
@@ -42,7 +43,8 @@
   booktitle={2022 IEEE Physical Assurance and Inspection of Electronics (PAINE)},
   pages={1--7},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true}
 }
 
 @inproceedings{king2020unsupervised,
@@ -51,7 +53,8 @@
   booktitle={2020 IEEE 63rd international midwest symposium on circuits and systems (MWSCAS)},
   pages={395--398},
   year={2020},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true}
 }
 
 @INPROCEEDINGS{9058062,
